aula17/04_bckend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: app-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: nginx:alpine
        ports:
        - containerPort: 3000
