aula17/05_frtnend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: app-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
